clients: sanitize XCURSOR_SIZE

Fixes https://gitlab.freedesktop.org/wayland/weston/issues/164